# pychop3d

./: .gitignore  .travis.yml  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bunny_config.yml  environment.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_linux  shoerack_config.yml  windows_requirements.txt  wing2.stl
.devcontainer/: devcontainer.json
INSTALL/: README.md  README.txt  setup_linux
INSTALL_scripts/: setup_linux
debug/: 0.stl  1.stl  2.stl  3.stl  4.stl  5.stl  6.stl  7.stl  tree0.json  tree1.json  tree_with_connectors.json
examples/: bunny_config.yml  picture_frame.yml  picture_frame_back.stl  picture_frame_frame.stl  shoe rack v13.stl  shoerack_config.yml  wing.stl  wing_config.yml
failed/20191214_220159/: boitier_inter_ventilo_radial.STL  tree0.json  tree1.json
failed/20191215_005834/: sweeping_name_plate_vf_20190611-56-1h0vlyo.stl
output/: output.txt
pychop3d/: __init__.py  blender_ops.py  blender_template.py.template  bsp.py  bsp_mesh.py  bsp_node.py  bsp_tree.py  config.py  configuration.py  connector.py  constants.py  debug.py  experiment.py  logger.py  main.py  node.py  objective_functions.py  process_normal.py  run.py  search.py  section.py  settings.py  tree.json  tree.py  utils.py
scripts/: debug.py  run.py  web_scraper.py
test/: conftest.py  regression_config_1.yml  regression_config_2.yml  regression_config_3.yml  regression_test_config.yml  regression_test_tree.json  regression_tree_1.json  regression_tree_2.json  regression_tree_25.json  regression_tree_3.json  test_bsp.py  test_configuration.py  test_connector.py  test_objectives.py  test_past_failures.py  test_preprocessing.py  test_regression.py
whl/: MeshPy-2018.2.1-cp37-cp37m-win_amd64.whl
(+132 files in other folders)
